# traefik-redirect-manager

./: README.md  pyproject.toml  sample-daemons-deployment.yml  sample-deployment.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
tests/core/: test_names.py  test_route.py
traefik_redirect_manager_core/: models.py  names.py  route.py
traefik_redirect_manager_daemons/: daemon.py  supervisor.py
traefik_redirect_manager_daemons/constructors/: certificate.py  ingress.py
traefik_redirect_manager_daemons/desturctors/: certificate.py  ingress.py  route.py  secret.py
traefik_redirect_manager_daemons/watchers/: certificate.py  ingress.py  route.py  secret.py
