[tool.poetry]
name = "traefik-redirec-manager"
version = "0.1.0"
description = "Redirect based web routing manager on top of traefik and kubernetes"
authors = ["Oskari Palojärvi <oskari@palojarvi.fi>"]
license = "Apache 2"
readme = "README.md"
packages = [ { include = "traefik_redirect_manager_core" } ]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
